--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -12,67 +12,70 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">WeaponApp</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/api/destiny">Home</a>
-                </li>
-                <% if (currentUser) { %>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/api/destiny/loadouts">Loadouts</a>
-                    </li>
-                    <% } %>
-            </ul>
-            <ul class="navbar-nav ms-auto">
-                <% if (!currentUser) { %>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/auth/signup">Sign Up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/auth/login">Sign In</a>
-                    </li>
-                    <% } else { %>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/auth/logout">Logout</a>
-                        </li>
-                        <% } %>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="#">WeaponApp</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/api/destiny">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/api/destiny/xur">Xur Reset</a>
+          </li>
+          <% if (currentUser) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/api/destiny/loadouts">Loadouts</a>
+            </li>
+            <% } %>
+        </ul>
+        <ul class="navbar-nav ms-auto">
+          <% if (!currentUser) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/signup">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/login">Sign In</a>
+            </li>
+            <% } else { %>
+              <li class="nav-item">
+                <a class="nav-link" href="/auth/logout">Logout</a>
+              </li>
+              <% } %>
+        </ul>
+      </div>
     </div>
-</nav>
-    <% if (alerts.success) { %>
-      <% alerts.success.forEach(msg=> { %>
-        <div class="alert alert-success">
-          <%= msg %>
-        </div>
-        <% }) %>
-          <% } %>
-            <% if (alerts.error) { %>
-              <% alerts.error.forEach(msg=> { %>
-                <div class="alert alert-danger">
-                  <%= msg %>
-                </div>
-                <% }) %>
-                  <% } %>
-                    <section class="contact" id="contact">
-                      <h2 class="heading"><span>Login!</span></h2>
-                      <form action="/auth/login" method="POST">
-                        <div class="input-box">
-                          <input type="email" placeholder="Email" name="email">
-                          <input type="password" placeholder="Password" name="password">
-                        </div>
-                        <input type="submit" value="Login" class="btn">
-                      </form>
-                    </section>
-                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+  </nav>
+  <% if (alerts.success) { %>
+    <% alerts.success.forEach(msg=> { %>
+      <div class="alert alert-success">
+        <%= msg %>
+      </div>
+      <% }) %>
+        <% } %>
+          <% if (alerts.error) { %>
+            <% alerts.error.forEach(msg=> { %>
+              <div class="alert alert-danger">
+                <%= msg %>
+              </div>
+              <% }) %>
+                <% } %>
+                  <section class="contact" id="contact">
+                    <h2 class="heading"><span>Login!</span></h2>
+                    <form action="/auth/login" method="POST">
+                      <div class="input-box">
+                        <input type="email" placeholder="Email" name="email">
+                        <input type="password" placeholder="Password" name="password">
+                      </div>
+                      <input type="submit" value="Login" class="btn">
+                    </form>
+                  </section>
+                  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
