--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -22,6 +22,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/api/destiny">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api/destiny/xur">Xur Reset</a>
+                    </li>
                     <% if (currentUser) { %>
                         <li class="nav-item">
                             <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
@@ -48,50 +51,50 @@
             </div>
         </div>
     </nav>
-        <div class="container mt-4">
-            <h1 class="text-white">Favorite Weapons</h1>
-            <div class="row">
-                <% weaponsArr.forEach((weapon, index)=> { %>
-                    <div class="col-md-3 mb-4 weapon-card">
-                        <div class="card h-100">
-                            <img src="https://www.bungie.net<%= weapon.icon %>" class="weapon-icon card-img-top"
-                                alt="<%= weapon.name %>">
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <%= weapon.name %>
-                                </h4>
-                                <h5 class="card-subtitle mb-2">
-                                    <%= weapon.weaponType %>
-                                </h5>
-                                <p class="card-text">Ammo:
-                                    <% if (weapon.ammoType===1) { %>
-                                        Primary
-                                        <% } else if (weapon.ammoType===2) { %>
-                                            Special
-                                            <% } else if (weapon.ammoType===3) { %>
-                                                Heavy
-                                                <% } %>
-                                </p>
-                                <div class="card-buttons">
-                                    <a class="btn btn-sm btn-info" href="/api/destiny/<%= weapon.hash %>">Details</a>
-                                    <button class="btn btn-sm btn-warning"
-                                        onclick="removeFromFavorites('<%= weapon._id %>')">Remove</button>
-                                    <button class="btn btn-sm btn-success"
-                                        onclick="addWeaponToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', 'https://www.bungie.net<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Loadout</button>
-                                </div>
+    <div class="container mt-4">
+        <h1 class="text-white">Favorite Weapons</h1>
+        <div class="row">
+            <% weaponsArr.forEach((weapon, index)=> { %>
+                <div class="col-md-3 mb-4 weapon-card">
+                    <div class="card h-100">
+                        <img src="https://www.bungie.net<%= weapon.icon %>" class="weapon-icon card-img-top"
+                            alt="<%= weapon.name %>">
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                <%= weapon.name %>
+                            </h4>
+                            <h5 class="card-subtitle mb-2">
+                                <%= weapon.weaponType %>
+                            </h5>
+                            <p class="card-text">Ammo:
+                                <% if (weapon.ammoType===1) { %>
+                                    Primary
+                                    <% } else if (weapon.ammoType===2) { %>
+                                        Special
+                                        <% } else if (weapon.ammoType===3) { %>
+                                            Heavy
+                                            <% } %>
+                            </p>
+                            <div class="card-buttons">
+                                <a class="btn btn-sm btn-info" href="/api/destiny/<%= weapon.hash %>">Details</a>
+                                <button class="btn btn-sm btn-warning"
+                                    onclick="removeFromFavorites('<%= weapon._id %>')">Remove</button>
+                                <button class="btn btn-sm btn-success"
+                                    onclick="addWeaponToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', 'https://www.bungie.net<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Loadout</button>
                             </div>
                         </div>
                     </div>
-                    <% if ((index + 1) % 4===0) { %>
-            </div>
-            <div class="row">
-                <% } %>
-                    <% }); %>
-            </div>
+                </div>
+                <% if ((index + 1) % 4===0) { %>
         </div>
+        <div class="row">
+            <% } %>
+                <% }); %>
+        </div>
+    </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="/scripts/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 
 </html>
