--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -13,103 +13,106 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">WeaponApp</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/api/destiny">Home</a>
-                </li>
-                <% if (currentUser) { %>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/api/destiny/loadouts">Loadouts</a>
-                    </li>
-                    <% } %>
-            </ul>
-            <ul class="navbar-nav ms-auto">
-                <% if (!currentUser) { %>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/auth/signup">Sign Up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/auth/login">Sign In</a>
-                    </li>
-                    <% } else { %>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/auth/logout">Logout</a>
-                        </li>
-                        <% } %>
-            </ul>
-        </div>
-    </div>
-</nav>
-    <div class="container mt-4">
-      <div class="row mb-3">
-        <div class="col">
-          <input type="text" id="search-bar" class="form-control" placeholder="Search for a weapon...">
-        </div>
-        <div class="col-auto">
-          <button id="search-button" class="btn btn-primary">Search</button>
-        </div>
+      <a class="navbar-brand" href="#">WeaponApp</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/api/destiny">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/api/destiny/xur">Xur Reset</a>
+          </li>
+          <% if (currentUser) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/api/destiny/loadouts">Loadouts</a>
+            </li>
+            <% } %>
+        </ul>
+        <ul class="navbar-nav ms-auto">
+          <% if (!currentUser) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/signup">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/auth/login">Sign In</a>
+            </li>
+            <% } else { %>
+              <li class="nav-item">
+                <a class="nav-link" href="/auth/logout">Logout</a>
+              </li>
+              <% } %>
+        </ul>
       </div>
-      <div class="row" id="weapons-container">
-        <% weaponsArr.forEach((weapon, index)=> { %>
-          <div class="col-md-3 mb-4 weapon-card position-relative">
-            <div class="card h-100">
-              <div class="card-buttons">
-                <a class="btn btn-sm btn-info" href="/api/destiny/<%= weapon.hash %>">Details</a>
-                <button class="btn btn-sm btn-warning"
-                  onclick="addToFavorites('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Favorites</button>
-                <button class="btn btn-sm btn-success"
-                  onclick="addWeaponToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Loadout</button>
-              </div>
-              <% if (weapon.icon) { %>
-                <img src="https://www.bungie.net<%= weapon.icon %>" class="card-img-top weapon-icon"
-                  alt="<%= weapon.name %>">
-                <% } %>
-                  <div class="card-body">
-                    <% if (weapon.name) { %>
-                      <h4 class="card-title weapon-name">
-                        <%= weapon.name %>
-                      </h4>
-                      <% } %>
-                        <% if (weapon.weaponType) { %>
-                          <h5 class="card-title">Weapon Type: <%= weapon.weaponType %>
-                          </h5>
-                          <% } %>
-                            <p class="card-text">Ammo:
-                              <% if (weapon.ammoType===1) { %>
-                                Primary
-                                <% } else if (weapon.ammoType===2) { %>
-                                  Special
-                                  <% } else if (weapon.ammoType===3) { %>
-                                    Heavy
-                                    <% } else { %>
-                                      Unknown
-                                      <% } %>
-                            </p>
-                  </div>
+    </div>
+  </nav>
+  <div class="container mt-4">
+    <div class="row mb-3">
+      <div class="col">
+        <input type="text" id="search-bar" class="form-control" placeholder="Search for a weapon...">
+      </div>
+      <div class="col-auto">
+        <button id="search-button" class="btn btn-primary">Search</button>
+      </div>
+    </div>
+    <div class="row" id="weapons-container">
+      <% weaponsArr.forEach((weapon, index)=> { %>
+        <div class="col-md-3 mb-4 weapon-card position-relative">
+          <div class="card h-100">
+            <div class="card-buttons">
+              <a class="btn btn-sm btn-info" href="/api/destiny/<%= weapon.hash %>">Details</a>
+              <button class="btn btn-sm btn-warning"
+                onclick="addToFavorites('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Favorites</button>
+              <button class="btn btn-sm btn-success"
+                onclick="addWeaponToLoadout('<%= weapon.name %>', '<%= weapon.hash %>', '<%= weapon.loreHash %>', '<%= weapon.icon %>', '<%= weapon.weaponType %>', '<%= weapon.ammoType %>')">Loadout</button>
             </div>
+            <% if (weapon.icon) { %>
+              <img src="https://www.bungie.net<%= weapon.icon %>" class="card-img-top weapon-icon"
+                alt="<%= weapon.name %>">
+              <% } %>
+                <div class="card-body">
+                  <% if (weapon.name) { %>
+                    <h4 class="card-title weapon-name">
+                      <%= weapon.name %>
+                    </h4>
+                    <% } %>
+                      <% if (weapon.weaponType) { %>
+                        <h5 class="card-title">Weapon Type: <%= weapon.weaponType %>
+                        </h5>
+                        <% } %>
+                          <p class="card-text">Ammo:
+                            <% if (weapon.ammoType===1) { %>
+                              Primary
+                              <% } else if (weapon.ammoType===2) { %>
+                                Special
+                                <% } else if (weapon.ammoType===3) { %>
+                                  Heavy
+                                  <% } else { %>
+                                    Unknown
+                                    <% } %>
+                          </p>
+                </div>
           </div>
-          <% if ((index + 1) % 4===0) { %>
-      </div>
-      <div class="row">
-        <% } %>
-          <% }); %>
-      </div>
-      <script id="weapons-data" type="application/json"><%= JSON.stringify(weaponsArr) %></script>
+        </div>
+        <% if ((index + 1) % 4===0) { %>
     </div>
+    <div class="row">
+      <% } %>
+        <% }); %>
+    </div>
+    <script id="weapons-data" type="application/json"><%= JSON.stringify(weaponsArr) %></script>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"></script>
-    <script src="/scripts/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="/scripts/script.js"></script>
 </body>
 
 </html>
