--- a/views/loadouts.ejs
+++ b/views/loadouts.ejs
@@ -22,6 +22,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/api/destiny">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/api/destiny/xur">Xur Reset</a>
+                    </li>
                     <% if (currentUser) { %>
                         <li class="nav-item">
                             <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
@@ -48,49 +51,49 @@
             </div>
         </div>
     </nav>
-        <div class="container mt-4">
-            <h1 class="text-white">Loadouts</h1>
-            <div class="row">
-                <% loadouts.forEach((loadout, index)=> { %>
-                    <div class="col-md-4 mb-4">
-                        <div class="card h-100 bg-dark text-white">
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <%= loadout.name %>
-                                </h4>
-                                <div class="mb-2">
-                                    <strong>Kinetic:</strong>
-                                    <img src="https://www.bungie.net<%= loadout.gear.kinetic.icon %>"
-                                        class="weapon-icon" alt="<%= loadout.gear.kinetic.name %>">
-                                    <%= loadout.gear.kinetic.name %>
-                                </div>
-                                <div class="mb-2">
-                                    <strong>Energy:</strong>
-                                    <img src="https://www.bungie.net<%= loadout.gear.energy.icon %>" class="weapon-icon"
-                                        alt="<%= loadout.gear.energy.name %>">
-                                    <%= loadout.gear.energy.name %>
-                                </div>
-                                <div class="mb-2">
-                                    <strong>Heavy:</strong>
-                                    <img src="https://www.bungie.net<%= loadout.gear.heavy.icon %>" class="weapon-icon"
-                                        alt="<%= loadout.gear.heavy.name %>">
-                                    <%= loadout.gear.heavy.name %>
-                                </div>
-                                <button class="btn btn-sm btn-danger"
-                                    onclick="removeLoadout('<%= loadout._id %>')">Delete</button>
+    <div class="container mt-4">
+        <h1 class="text-white">Loadouts</h1>
+        <div class="row">
+            <% loadouts.forEach((loadout, index)=> { %>
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100 bg-dark text-white">
+                        <div class="card-body">
+                            <h4 class="card-title">
+                                <%= loadout.name %>
+                            </h4>
+                            <div class="mb-2">
+                                <strong>Kinetic:</strong>
+                                <img src="https://www.bungie.net<%= loadout.gear.kinetic.icon %>" class="weapon-icon"
+                                    alt="<%= loadout.gear.kinetic.name %>">
+                                <%= loadout.gear.kinetic.name %>
                             </div>
+                            <div class="mb-2">
+                                <strong>Energy:</strong>
+                                <img src="https://www.bungie.net<%= loadout.gear.energy.icon %>" class="weapon-icon"
+                                    alt="<%= loadout.gear.energy.name %>">
+                                <%= loadout.gear.energy.name %>
+                            </div>
+                            <div class="mb-2">
+                                <strong>Heavy:</strong>
+                                <img src="https://www.bungie.net<%= loadout.gear.heavy.icon %>" class="weapon-icon"
+                                    alt="<%= loadout.gear.heavy.name %>">
+                                <%= loadout.gear.heavy.name %>
+                            </div>
+                            <button class="btn btn-sm btn-danger"
+                                onclick="removeLoadout('<%= loadout._id %>')">Delete</button>
                         </div>
                     </div>
-                    <% if ((index + 1) % 3===0) { %>
-            </div>
-            <div class="row">
-                <% } %>
-                    <% }); %>
-            </div>
+                </div>
+                <% if ((index + 1) % 3===0) { %>
         </div>
+        <div class="row">
+            <% } %>
+                <% }); %>
+        </div>
+    </div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="/scripts/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 
 </html>
