--- a/views/weapon.ejs
+++ b/views/weapon.ejs
@@ -25,6 +25,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/api/destiny">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/api/destiny/xur">Xur Reset</a>
+          </li>
           <% if (currentUser) { %>
             <li class="nav-item">
               <a class="nav-link" href="/api/destiny/favorites">Favorites</a>
